--- a/_posts/2007-05-21-total-fun.md
+++ b/_posts/2007-05-21-total-fun.md
@@ -26,7 +26,7 @@ Lets give an example. If you get a new girlfriend, your ASS goes up and so your 
 
 Please make sure you understand claim 1 before continuing to read (see also the following figure).
 
-![Fun Graph](/assets/images/posts/total-fun.jpg)
+{% include image.html url="/assets/images/posts/total-fun.jpg" %}
 
 Now, in order to calculate the total amount of fun a person has in a given period we obviously *integrate* the effective fun function over the given period. We use the fundamental theorem of calculus, stating that the integral of the derivative of a function equals the function itself (note that as this is not the true fundamental theorem of calculus, which speaks solely of continuous functions, but its more in the spirit of it) to get the following:
 
