--- a/_posts/2007-05-11-ants.md
+++ b/_posts/2007-05-11-ants.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Ants"
 date:   2007-05-11 01:00:00
 excerpt: "An easy perception puzzle"
-categories: Puzzles
+categories: Puzzle
 tags:  Math Puzzles Easy Classic
 image:
   feature: ants.jpg
