--- a/_posts/2007-08-13-23-and-2000.md
+++ b/_posts/2007-08-13-23-and-2000.md
@@ -3,7 +3,7 @@ layout: post
 title:  "23 and 2000"
 date:   2007-08-13 01:00:00
 excerpt: "An easy puzzle"
-categories: Puzzle
+categories: WIP
 tags:  Puzzle Math Easy
 image:
   feature: calculator.jpg
@@ -24,3 +24,25 @@ Prove that there exists an arrangement of the symbols '+', '×', '(' and ')' in-
 2. Consider a more general case. Replace in the riddle above the number 23 by K and the number 2000 by N. Describe all the pairs, K, N, for which a solution to the riddle exists.
 
 *Thanks to Misha Seltzer, for sending me this cool riddle!*
+
+## Spoiler Alert - Solution Ahead
+
+$$2000 = 2^4 \times 5^3$$
+
+Note that for any 2 numbers, a and b, if a or b is even, then $$(a \times b)$$ is even, and if both are odd, then $$(a + b)$$ is even. Basically, we can take any 2 consecutive numbers from the line and create an even number. That means that we can take the first 8 numbers, and create $$2^4$$.
+
+We are left with 23 - 8 = 15 numbers. If we can take any sequence of 5 numbers and create a number the is divisible by 5, then we are done. Let's consider the numbers mod 5. If one of the numbers is 0 mod 5, just multiply all 5 numbers together. Otherwise, the 5 numbers are all equal to $$\plusminus 1, \plusminus 2$$ mod 5. If you have a number repeating 5 times, just add them all up. Otherwise, if you have a 1 and a -1 next to each other or a 2 and a -2 next to each other, just add those together and you get 0 mod 5 (and then multiply all of the numbers). Otherwise, 1 and -1 are not adjacent, and 2 and -2 are not adjacent.
+
+1 1 1
+1 1 2
+//1 1 -2
+
+1 2 1
+1 2 2
+1 2 -1
+
+1 -2 1
+1 -2 -1
+1 -2 -2
+
+That means that there must be a subsequence of the form: $$\plusminus 2 \plusminus 1 \plusminus2$$.
