--- a/_posts/2007-08-13-23-and-2000.md
+++ b/_posts/2007-08-13-23-and-2000.md
@@ -3,7 +3,7 @@ layout: post
 title:  "23 and 2000"
 date:   2007-08-13 01:00:00
 excerpt: "An easy puzzle"
-categories: WIP
+categories: Puzzle
 tags:  Puzzle Math Easy
 image:
   feature: calculator.jpg
@@ -25,7 +25,7 @@ Prove that there exists an arrangement of the symbols '+', '×', '(' and ')' in-
 
 *Thanks to Misha Seltzer, for sending me this cool riddle!*
 
-## Spoiler Alert - Solution Ahead
+<!-- ## Spoiler Alert - Solution Ahead
 
 $$2000 = 2^4 \times 5^3$$
 
@@ -45,4 +45,4 @@ We are left with 23 - 8 = 15 numbers. If we can take any sequence of 5 numbers a
 1 -2 -1
 1 -2 -2
 
-That means that there must be a subsequence of the form: $$\plusminus 2 \plusminus 1 \plusminus2$$.
+That means that there must be a subsequence of the form: $$\plusminus 2 \plusminus 1 \plusminus2$$. -->
