--- a/_posts/2007-08-13-23-and-2000.md
+++ b/_posts/2007-08-13-23-and-2000.md
@@ -3,7 +3,7 @@ layout: post
 title:  "23 and 2000"
 date:   2007-08-13 01:00:00
 excerpt: "An easy puzzle"
-categories: Puzzle
+categories: Puzzles
 tags:  Puzzle Math Easy
 image:
   feature: calculator.jpg
