--- a/_posts/2007-10-13-pirates.md
+++ b/_posts/2007-10-13-pirates.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Pirates!"
 date:   2007-10-13 01:00:00
 excerpt: "An easy puzzle"
-categories: Puzzle
+categories: Puzzles
 tags:  Puzzle Math Easy
 image:
   feature: pirates.jpg
