--- a/_posts/2007-11-05-pawns.md
+++ b/_posts/2007-11-05-pawns.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Pawns"
 date:   2007-11-05 01:00:00
 excerpt: "A puzzle with potential"
-categories: Puzzle
+categories: Puzzles
 tags:  Puzzle Math
 image:
   feature: pawn.jpg
