--- a/_posts/2010-01-14-fat-aunts.md
+++ b/_posts/2010-01-14-fat-aunts.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Fat Aunts"
 date:   2010-01-14 01:00:00
 excerpt: "Analysis puzzle"
-categories: Puzzle
+categories: Puzzles
 tags:  Math Puzzle Analysis
 image:
   feature: doughnuts.jpg
