--- a/_posts/2007-05-21-total-fun.md
+++ b/_posts/2007-05-21-total-fun.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Total Fun"
 date:   2007-05-21 01:00:00
 excerpt: "A humorous and depressing math post"
-categories: Humor
+categories: Math
 tags:  Humor Math
 image:
   feature: fun.jpg
