--- a/_posts/2007-05-21-total-fun.md
+++ b/_posts/2007-05-21-total-fun.md
@@ -7,7 +7,7 @@ categories: Math
 tags:  Humor Math
 image:
   feature: fun.jpg
-  topPosition: -100px
+  topPosition: -100
 bgContrast: light
 bgGradientOpacity: lighter
 syntaxHighlighter: no
