--- a/_posts/2007-11-05-pawns.md
+++ b/_posts/2007-11-05-pawns.md
@@ -7,7 +7,7 @@ categories: Puzzles
 tags:  Puzzle Math
 image:
   feature: pawn.jpg
-  topPosition: -300px
+  topPosition: -300
 bgContrast: dark
 bgGradientOpacity: darker
 syntaxHighlighter: no
