--- a/_posts/2007-05-11-ants.md
+++ b/_posts/2007-05-11-ants.md
@@ -7,7 +7,7 @@ categories: Puzzles
 tags:  Math Puzzles Easy Classic
 image:
   feature: ants.jpg
-  topPosition: -100px
+  topPosition: -100
 bgContrast: dark
 bgGradientOpacity: darker
 syntaxHighlighter: no
