--- a/_posts/2007-08-13-23-and-2000.md
+++ b/_posts/2007-08-13-23-and-2000.md
@@ -7,7 +7,7 @@ categories: Puzzles
 tags:  Puzzle Math Easy
 image:
   feature: calculator.jpg
-  topPosition: -100px
+  topPosition: -100
 bgContrast: dark
 bgGradientOpacity: darker
 syntaxHighlighter: no
