--- a/_posts/2007-10-13-pirates.md
+++ b/_posts/2007-10-13-pirates.md
@@ -7,7 +7,7 @@ categories: Puzzles
 tags:  Puzzle Math Easy
 image:
   feature: pirates.jpg
-  topPosition: -100px
+  topPosition: -100
 bgContrast: dark
 bgGradientOpacity: darker
 syntaxHighlighter: no
