--- a/_posts/2010-01-14-fat-aunts.md
+++ b/_posts/2010-01-14-fat-aunts.md
@@ -7,7 +7,7 @@ categories: Puzzles
 tags:  Math Puzzle Analysis
 image:
   feature: doughnuts.jpg
-  topPosition: -400px
+  topPosition: -400
 bgContrast: dark
 bgGradientOpacity: darker
 syntaxHighlighter: no
