--- a/_posts/2020-03-01-ball-pit.md
+++ b/_posts/2020-03-01-ball-pit.md
@@ -8,14 +8,17 @@ tags:  Puzzles Algorithms Data-Structures
 image:
   feature: ball-pit.jpg
   topPosition: -100
-bgContrast: dark
-bgGradientOpacity: darker
-syntaxHighlighter: no
+bgContrast: light
+bgGradientOpacity: lighter
+syntaxHighlighter: yes
 ---
 We need to build a data structure that simulates a ball pit. It needs to support 3 operations:
-* $$void Insert(color)$$ - add a ball of color $$color$$ to the pit.
-* $$void Remove(color)$$ - remove a ball of color $$color$$ from the pit. If the pit doesn't contain a ball of the color $$color$$, the behavior is undefined.
-* $$bool Unique()$$ - returns true i.f.f. all the balls in the pit are of the same color.
+
+`void Insert(int color)` - Add a ball of color $$color$$ to the pit.
+
+`void Remove(int color)` - Remove a ball of color $$color$$ from the pit. If the pit doesn't contain a ball of the color $$color$$, the behavior is undefined.
+
+`bool Unique()` - Returns true i.f.f. all the balls in the pit are of the same color.
 
 ***Can you implement this data structure with less than O(n) memory? (where n is the number of colors)?***
 
