--- a/_posts/2020-03-01-ball-pit.md
+++ b/_posts/2020-03-01-ball-pit.md
@@ -23,3 +23,31 @@ We need to build a data structure that simulates a ball pit. It needs to support
 ***Can you implement this data structure with less than O(n) memory? (where n is the number of colors)?***
 
 > Thanks Ofir Mebel for this really cool riddle!
+
+## Spoiler Alert - Solution Ahead!
+
+We can implement this data structure with just 3 counters: $$n$$, $$\sum{x_i}$$, $$\sum{x_{i}^{2}}$$.
+
+Implement the operations as follows:
+
+```c++
+void Insert(int color) {
+  n++;
+  sigma_xi += color;
+  sigma_xi2 += color * color;
+}
+
+void Remove(int color) {
+  n--;
+  sigma_xi -= color;
+  sigma_xi2 -= color * color;
+}
+
+bool Unique() {
+  if (sigma_xi % n != 0) return false;
+  int x = sigma_xi / n;
+  return sigma_xi2 == x * x * n;
+}
+```
+
+Obviously if all the balls in the pit are the same color, `Unique` will return true. To show that `Unique` cannot return true otherwise, note that the function $$\sum{x_{i}^2}$$ strictly gets its minimum (subject to a fixed sum of the $$x_i$$s) when all the $$x_i$$ are equal. $$\blacksquare$$
