--- a/_posts/2020-03-01-ball-pit.md
+++ b/_posts/2020-03-01-ball-pit.md
@@ -18,7 +18,7 @@ We need to build a data structure that simulates a ball pit. It needs to support
 
 `void Remove(int color)` - Remove a ball of color $$color$$ from the pit. If the pit doesn't contain a ball of the color $$color$$, the behavior is undefined.
 
-`bool Unique()` - Returns true i.f.f. all the balls in the pit are of the same color.
+`bool Constant()` - Returns true i.f.f. all the balls in the pit are of the same color.
 
 ***Can you implement this data structure with less than O(n) memory? (where n is the number of colors)?***
 
@@ -26,9 +26,15 @@ We need to build a data structure that simulates a ball pit. It needs to support
 
 ## Spoiler Alert - Solution Ahead!
 
-We can implement this data structure with just 3 counters: $$n$$, $$\sum{x_i}$$, $$\sum{x_{i}^{2}}$$.
+All elements in our ball pit data structure are the same i.f.f. the *variance* $$V(x)$$ is 0.
+Now:
 
-Implement the operations as follows:
+$$V(x) = 0\\
+\implies E(x^2) - (E(x))^2 = 0\\
+\implies \frac{\sum{x_i^2}}{n} - (\frac{\sum{x_i}}{n})^2 = 0\\
+\implies n\sum{x_i^2} = (\sum{x_i})^2$$
+
+So the ball pit contains elements of the same color i.f.f. $$n\sum{x_i^2} = (\sum{x_i})^2$$, and we can implement this data structure with just 3 integer counters: $$n$$, $$\sum{x_i}$$, $$\sum{x_{i}^{2}}$$, as follows:
 
 ```c++
 void Insert(int color) {
@@ -43,11 +49,9 @@ void Remove(int color) {
   sigma_xi2 -= color * color;
 }
 
-bool Unique() {
-  if (sigma_xi % n != 0) return false;
-  int x = sigma_xi / n;
-  return sigma_xi2 == x * x * n;
+bool Constant() {
+  return n * sigma_xi2 == sigma_xi * sigma_xi;
 }
 ```
 
-Obviously if all the balls in the pit are the same color, `Unique` will return true. To show that `Unique` cannot return true otherwise, note that the function $$\sum{x_{i}^2}$$ strictly gets its minimum (subject to a fixed sum of the $$x_i$$s) when all the $$x_i$$ are equal. $$\blacksquare$$
+You can also reason about why this data structure works directly, ignoring the underlying variance calculation. Indeed, obviously if all the balls in the pit are the same color, `Constant` will return true. To show that `Constant` cannot return true otherwise, note that the function $$\sum{x_{i}^2}$$ strictly gets its minimum (subject to a fixed sum of the $$x_i$$s) when all the $$x_i$$ are equal. $$\blacksquare$$
