--- a/taotp.ipynb
+++ b/taotp.ipynb
@@ -746,7 +746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def padding_dimension(encoding, epsilon=1e-3):\n",
+    "def standard_padding_dimension(encoding, epsilon=1e-3):\n",
     "  return np.sum(np.max(encoding, axis=0) - np.min(encoding, axis=0) <= 2 * epsilon)"
    ]
   },
@@ -829,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
