--- a/_posts/2023-08-04-taotp.md
+++ b/_posts/2023-08-04-taotp.md
@@ -13,11 +13,14 @@ bgGradientOpacity: darker
 syntaxHighlighter: no
 ---
 
+
+Direct link: <a href="/taotp.pdf" style="background-color: Azure">The Art of Transformer Programming book</a>.
+
 ### "How can modern large language models perform simple computations, like sorting a list, searching for a sequence, or adding two numbers in decimal representation?"
 
-I've spent a few days during the holiday season of last year answering this and related questions by manually programming a set of programs on a _Transformer computer_. I.e. I manually set the weights of a Transformer to execute these programs. I finally gathered enough free weekend time to put my results in booklet form.
+I've spent a few days during the holiday season of last year answering this and related questions by manually programming a set of programs on a _Transformer computer_. I.e. I manually set the weights of a Transformer to execute these programs. I finally gathered enough free weekend time to put my results in book form.
 
-You can find the full booklet online **[here](/taotp.pdf).**
+You can find the full book online **[here](/taotp.pdf).**
 
 This was one of the more fun things I've done in a while!
 
