--- a/_posts/2023-08-04-taotp.md
+++ b/_posts/2023-08-04-taotp.md
@@ -70,4 +70,14 @@ Transformer architecture. The most interesting cases though, are those that are 
 humans _and_ are hard for the optimizer or the architecture, and understanding these better
 might be key to creating better AI systems.
 
+Feel free to use this in case you'd like to cite the book:
 
+```
+@misc{Leviathan_2022,
+  title={The Art of Transformer Programming},
+  url={https://yanivle.github.io/taotp.pdf},
+  journal={Yaniv Leviathan’s Blog},
+  author={Leviathan, Yaniv},
+  year={2022}
+}
+```
