--- a/_posts/2023-08-04-taotp.md
+++ b/_posts/2023-08-04-taotp.md
@@ -15,18 +15,19 @@ recommended: yes
 ---
 
 
-Direct link: <a href="/taotp.pdf" style="background-color: Azure">The Art of Transformer Programming book</a>.
+Book page: <a href="/taotp.html" style="background-color: Azure">The Art of Transformer Programming</a>.
 
 ### "How can modern large language models perform simple computations, like sorting a list, searching for a sequence, or adding two numbers in decimal representation?"
 
 I've spent a few days during the holiday season of last year answering this and related questions by manually programming a set of programs on a _Transformer computer_. I.e. I manually set the weights of a Transformer to execute these programs.
 In the hopes that this work might be interesting to others, I've spent some free weekend time compiling my results into book form.
 
-You can find the full book online **[here](/taotp.pdf).**
+You can find the full book online **[here](/taotp.html).**
 
 This was one of the more fun things I've done in a while!
 
-I also printed very few physical copies, and might include a way to order a physical copy, if anyone might be interested in reading it in bed :) I admit that I did not imagine the feeling of holding a physical copy of my own book to be so satisfying!
+I also printed very few physical copies, and might include a way to order a physical copy, if anyone might be interested in reading it in bed :)
+I admit that I did not imagine the feeling of holding a physical copy of my own book to be so satisfying!
 
 {% include image.html url="/assets/images/posts/taotp/taotp_book.jpg" height=20 %}
 
@@ -77,7 +78,7 @@ Feel free to use this in case you'd like to cite the book:
 ```
 @misc{Leviathan_2022,
   title={The Art of Transformer Programming},
-  url={https://yanivle.github.io/taotp.pdf},
+  url={https://yanivle.github.io/taotp.html},
   journal={Yaniv Leviathan’s Blog},
   author={Leviathan, Yaniv},
   year={2022}
